<resources>
    <string name="app_name">Manga Stone</string>
    <string name="manga">Manga</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="title_favorite">Favorite</string>
    <string name="something_wrong">Oops... something went wrong</string>
    <string name="rank">Rank:</string>
    <string name="start_date">Start Date:</string>
    <string name="members">Members:</string>
    <string name="score">Score:</string>
    <string name="share">SHARE</string>
    <string name="change_language">Change Language</string>

    <string name="cd_btn_fav">Button to add favorite</string>
    <string name="cd_app_logo">App Logo</string>
    <string name="cd_manga_pic">Manga Picture</string>
    <string name="cd_next_button">Button to go next</string>
</resources>