<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/manga_fragment">

    <fragment
        android:id="@+id/manga_fragment"
        android:name="com.mrx.mangastone.manga.MangaFragment"
        android:label="@string/manga"
        tools:layout="@layout/fragment_manga">
        <action
            android:id="@+id/action_manga_fragment_to_favorite_fragment"
            app:destination="@id/favorite_fragment" />
    </fragment>

    <fragment
        android:id="@+id/favorite_fragment"
        android:name="com.mrx.mangastone.favorite.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_favorite_fragment_to_setting_fragment"
            app:destination="@id/setting_fragment" />
    </fragment>

    <fragment
        android:id="@+id/setting_fragment"
        android:name="com.mrx.mangastone.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />

</navigation>